# ptf-daq-programs

./: #cd_Galil.c#  #cd_Galil_Changes-1-25.c#  .gitignore  Calib_Tilt_00.txt  CalibratePhidget.py  CalibratePhidget_backup.py  Degaus.sh  DegausCycloON.sh  Documentation.txt  Doxyfile  Makefile  Makefile.tmp  Motors.h  README  README.md  Spatial-simple.py  cd_Galil.c  cd_Galil.h  cd_Galil_Changes-1-25.c  coilVoltageCurrent.cpp  col.hpp  evid.h  experim.h  experim.h_old  experim_new.h  feDegauss  feMotor  feOpticalBox.py  fePhidget  fePhidget.c  fePhidget22.c  feRotatorMount.py  feScan  feScan.cxx  fedvm  fedvm.cxx  fesimdaq.cxx  fewiener.cxx  has.hpp  manual_scan_sequences.txt  (+5 more)
alternate_feScan/: feScan.c  feScan.c~  feScanVert.c
collision/: Makefile  Readme.md  Untitled.code-workspace  benchmark.cpp  debug.cpp  debug.hpp  debugme.cxx  measurements.hpp  path_generation_algorithm.md  tests.cpp  tests_2.cpp  todo.md
collision/geometry/: bounds.cpp  common.hpp  geom.cpp  geom.hpp  intersection_displacement.cpp  intersection_rotation.cpp  intersection_static.cpp  linesegment.hpp  prism.cpp  prism.hpp  quaternion.cpp  quaternion.hpp  rotations.cpp  rotations.hpp  sat.cpp  sat.hpp  vec3.cpp  vec3.hpp
collision/pathgen/: cyl.cpp  cyl.hpp  pathgen.cpp  pathgen.hpp  pathgen_internal.hpp  rect.cpp  rect.hpp
collision/serialization/: serialization.cpp  serialization.hpp  serialization_internal.cpp  serialization_internal.hpp
degauss/: Makefile  degauss.cxx  degauss.hxx  degauss_coils.cxx  feDegauss.cxx  feDegauss.hxx  odblayer.cxx  optimize.ini  util.cxx  util.hxx
deprecated/: #feMove.cxx_debuggingOpticalBoxvsPMTcollision31Mar2017#  #feMoveNew.cxx#  Ben_Backup_July31_feMove_New.cxx  Ben_Backup_July31_feScan_new.c  ScanSequence_shauntest.cxx  TPathCalculator.cxx_Bound  TPathCalculator.cxx_PMTcollisionAvoidanceUpdateCompleted_3Apr2017  TPathCalculatorOld.cxx~  TPathCalculatorOld.hxx~  TPathCalculator_16Mar2017.cxx  TPathCalculator_16Mar2017.hxx  TPathCalculator_18Apr2017.hxx~  TPathCalculator_28Apr2017.cxx  TPathCalculator_28Apr2017.hxx  TRotationCalculator.cxx_1  TRotationCalculator.cxx_PMTcollisionAvoidanceUpdateCompleted_3Apr2017  TRotationCalculator_16Mar2017.cxx  TRotationCalculator_16Mar2017.hxx  TRotationCalculator_28Apr2017.cxx  TRotationCalculator_28Apr2017.hxx  copy_feMove  feMove.c_v0  feMove.c_v1  feMove.cxx_PMTcollisionAvoidanceUpdateCompleted_3Apr2017  feMove.cxx_bac  feMove.cxx_backupNow  feMove.cxx_localTPathCalculators_20Apr2017~  feMove.cxx_original  feMove.cxx_working  feMoveNew.cxx  feMoveNew.cxx~  feMoveOld  feMove_16Mar2017.cxx  feMove_18Apr2017.cxx  feMove_28Apr2017.cxx  feMove_28Apr2017.cxx~  feMove_backup  feMove_newest_older_version.cxx  feScan_Jan20_2015.c  feScan_May20_2014.c  (+1 more)
documentation/: ProgressReportSept_v1_IEEE.tex
documentation/PTF Manual/: ptf_manual.aux  ptf_manual.out  ptf_manual.tex  ptf_manual.tex~
documentation/reference_manual/: reference_manual.aux  reference_manual.out  reference_manual.tex  reference_manual.toc
documentation/reference_manual/images/: OpticalBox.xcf  bottom-b-z-demo.pgf  degaussExplanation.pgf
feAccelerometer/: Makefile  fePhidgetAccelerometer.c  fePhidgetSpatial.c
fewiener/: .gitignore  Makefile  fewiener.cxx  gen_hv.perl  gen_hv_deap.perl  gen_ptf.perl  hv_deap.html  hv_fgdmini.html  hv_fgdmini2.html  hv_ptf.html  hv_ptf.html.20180920  hv_ptf.html.20181122  hv_ptf.html_backup  hv_ptf.html_backup2  utils.cxx  utils.h  vme.html  vme_deap.html  vme_iris.html
fewiener/html/: fewiener_8cxx_source.html  files.html  index.html
fewiener/latex/: refman.tex
field/: degauss.cxx  degauss_coils.cxx  odblayer.cxx  odblayer.hxx  optimize.cxx  set.cxx  single.cxx  test_degauss.cxx
motor/: feMotor.c
move/: README.md  demo_path.cxx  feMove.cxx  feMove.hxx  feMoveMTS.cxx  feMove_Reduced.cxx  feMove_backup.cxx  feMove_midas_changed.cxx  feMove_new.cxx  feMove_no_tilt.c  feMove_no_tilt_precedent.cxx  feMove_prev.cxx  feMove_tilt.cxx
norm_calc/: norm_eval.cxx  norm_eval.h
pathcalc/: ScanSequence.cxx  ScanSequence.hxx  TGantryConfigCalculator.cxx  TGantryConfigCalculator.hxx  TPathCalculator.cxx  TRotationCalculator.cxx  calculateNormalIncidence.cxx  calculateNormalIncidence.hxx  geometry.hpp  point_xy.hpp  polygon.hpp
render/: CMakeLists.txt  CollisionObjectsViewer.cpp  CollisionObjectsViewer.hpp
scan/: feScan.cxx  feScan_reduced.cxx  scan.html
